# wl

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: release.yml
src/: adapter.rs  api.rs  connect.rs  disconnect.rs  lib.rs  list_networks.rs  main.rs  nmcli.rs  scan.rs  status.rs  toggle.rs
tests/: e2e.rs
